fixed word wrap on long tags

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -74,6 +74,7 @@ br { clear: both; }
 .tags div{
     width:80px;
     display:inline-block;
+    word-wrap:break-word;
 }
 .tags a:hover{ 
 	text-decoration: none; 
